--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.1",
     "nodemon": "^3.0.3",
     "uuid": "^9.0.1"
   }
